src/main/java/com/example/coupon/domain/errors/CouponInactiveException.java
package com.example.coupon.domain.errors;

public class CouponInactiveException extends RuntimeException {
}
